Parts of config.toml are not localized in Hindi.
changes made as follows as issue description.

Proposed Solution:
Localize [langauges.hi] section as following

[languages.hi]
title = "Kubernetes"
description = "<localized text>"
languageName = "हिंदी Hindi"
weight = 11
contentDir = "content/hi"
languagedirection = "ltr"

--- a/config.toml
+++ b/config.toml
@@ -429,8 +429,8 @@ language_alternatives = ["en"]
 
 [languages.hi]
 title = "Kubernetes"
-description = "Production-Grade Container Orchestration"
-languageName = "Hindi"
+description = "localized text"
+languageName = "हिंदी Hindi"
 weight = 11
 contentDir = "content/hi"
 languagedirection = "ltr"
