--- a/data/announcements/scheduled.yaml
+++ b/data/announcements/scheduled.yaml
@@ -34,7 +34,7 @@ announcements:
   startTime: 2022-04-07T00:00:00 # Added in PR: https://github.com/kubernetes/website/pull/32805
   endTime: 2022-05-10T00:00:00 # Expires 2022-05-10, but will change text slightly on release date
   style: "background: #326ce5"
-  title: "Dockershim removed from Kubernetes 1.24"
+  title: "Dockershim removed from Kubernetes"
   message: |
     As of Kubernetes 1.24, Dockershim is no longer included in Kubernetes.
     Read the [Dockershim Removal FAQ](/dockershim) to see what this means to you.
