--- a/data/announcements/scheduled.yaml
+++ b/data/announcements/scheduled.yaml
@@ -32,7 +32,7 @@ announcements:
 
 - name: Dockershim removal
   startTime: 2022-04-07T00:00:00 # Added in PR: https://github.com/kubernetes/website/pull/32805
-  endTime: 2022-05-10T00:00:00 # Expires 2022-05-10, but will change text slightly on release date
+  endTime: 2022-05-09T00:00:00 # Expires 2022-05-10, but will change text slightly on release date
   style: "background: #326ce5"
   title: "Dockershim removal set for Kubernetes 1.24"
   message: |
@@ -52,7 +52,7 @@ announcements:
 
 - name: Kubecon 2020 EU
   startTime: 2020-08-16T00:00:00 # Added in https://github.com/kubernetes/website/pull/23183
-  endTime: 2020-08-20T00:00:00 # Removed in https://github.com/kubernetes/website/pull/23272
+  endTime: 2020-08-20T00:00:00 # Removed in https://github.com/kubernetes/website/pu23272ll/
   style: "background: #3f0374"
   title: |
     <img src="images/kubecon_ad_eu_2020.png" style="float: right; height: 80px;" />
@@ -103,3 +103,14 @@ announcements:
   message: |
     2 days of incredible opportunities to collaborate, learn + share with the entire community!<br />
     December 9 + 10, 2021.
+
+- name: Kubecon 2022 EU
+  startTime: 2022-05-09T00:00:00
+  endTime: 2022-05-20T18:00:00
+  style: "background: linear-gradient(90deg, rgb(253, 225, 203) 0%, rgb(236, 107, 67) 100%)"
+  title: |
+    <img src ="/images/announcements/kccnc-eu-2022-white.svg" style="float: right; height: 80px;" />
+    <a href= "https://events.linuxfoundation.org/kubecon-cloudnativecon-europe/">KubeCon + CloudNativeCon EU 2022</a> <em> Valencia, Spain + Virtual</em>.
+  message: |
+    5 days of incredible opportunites to collaborate, learn + share with the entire community!<br />
+    May 16 - 20, 2022.
