--- a/content/zh/examples/controllers/fluentd-daemonset.yaml
+++ b/content/zh/examples/controllers/fluentd-daemonset.yaml
@@ -19,9 +19,13 @@ spec:
         name: fluentd-elasticsearch
     spec:
       tolerations:
-      # this toleration is to have the daemonset runnable on master nodes
-      # remove it if your masters can't run pods
+       # 这些容忍度使得 DaemonSet 能够在控制平面节点上运行
+       # 如果你的控制节点不可以运行 Pod，可以删除它们
+      - key: node-role.kubernetes.io/control-plane
+        operator: Exists
+        effect: NoSchedule
       - key: node-role.kubernetes.io/master
+        operator: Exists
         effect: NoSchedule
       containers:
       - name: fluentd-elasticsearch
