--- a/config.toml
+++ b/config.toml
@@ -145,7 +145,7 @@ fullversion = "v1.23.6"
 version = "v1.23"
 githubbranch = "main"
 docsbranch = "main"
-deprecated = false
+deprecated = true
 currentUrl = "https://kubernetes.io/docs/home/"
 nextUrl = "https://kubernetes-io-vnext-staging.netlify.com/"
 
